--- a/src/Questions/Questions.css
+++ b/src/Questions/Questions.css
@@ -1,3 +1,17 @@
+.questions {
+  height: 100vh;
+  display: flex;
+  place-content: center;
+  place-items: center;
+  flex-direction: column;
+  background-image: linear-gradient(
+      180deg,
+      rgb(0 0 0 / 26%),
+      rgba(0, 0, 0, 0.6)
+    ),
+    url(https://www.nielit.gov.in/images/143583910.jpeg);
+  color: white;
+}
 .goBack {
   border: none;
   padding: 10px 20px;
@@ -6,4 +20,34 @@
   border-radius: 5px;
   cursor: pointer;
   text-decoration: none;
+  margin-bottom: 20px;
+}
+.questions .container {
+  display: grid;
+  gap: 10px;
+  grid-template-columns: repeat(2, 1fr);
+}
+.questions .container .questionBox {
+  padding: 10px 50px 10px 10px;
+  border: 1px solid;
+  background: rgba(0, 0, 0, 0.218);
+  border-radius: 5px;
+}
+.items {
+  position: relative;
+}
+.items a {
+  color: #fff;
+}
+.items .pdfContent {
+  display: none;
+  background: rgba(0, 0, 0, 0.556);
+}
+
+.items:hover .pdfContent {
+  display: block;
+  position: absolute;
+  z-index: 999;
+  height: 300px;
+  width: 300px;
 }
