--- a/src/Home.css
+++ b/src/Home.css
@@ -16,17 +16,16 @@
   flex-direction: column;
   color: #fff;
 }
+.header {
+  background: rgba(0, 0, 0, 0.42);
+  font-size: calc(1em + 1vw);
+}
 .Home .browse {
   border: none;
   padding: 20px;
-  background: #0f0f75;
+  background: #ff0000;
   color: #fff;
   border-radius: 5px;
   cursor: pointer;
   text-decoration: none;
-}
-.footer {
-  position: absolute;
-  bottom: 0;
-  margin-bottom: 10px;
 }
