--- a/src/Questions/Questions.css
+++ b/src/Questions/Questions.css
@@ -5,18 +5,20 @@
   place-items: center;
   flex-direction: column;
   background-image: linear-gradient(
-      180deg,
-      rgb(0 0 0 / 26%),
-      rgba(0, 0, 0, 0.6)
-    ),
-    url(https://www.nielit.gov.in/images/143583910.jpeg);
-  color: white;
-  justify-content: flex-start;
+    180deg,
+    rgb(0 0 0 / 26%),
+    rgba(0, 0, 0, 0.6)
+  );
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: rgb(255, 255, 255);
+
+  justify-content: center;
 }
 .goBack {
   border: none;
   padding: 10px 20px;
-  background: #0f0f75;
+  background: #ff0000;
   color: #fff;
   border-radius: 5px;
   cursor: pointer;
@@ -31,42 +33,26 @@
 .questions .container .questionBox {
   padding: 10px 50px 10px 10px;
   border: 1px solid;
-  background: rgba(0, 0, 0, 0.218);
+  background: #384bf6;
   border-radius: 5px;
 }
 .items {
+  list-style-type: none;
   position: relative;
-}
-.items a {
-  color: #fff;
-}
-.items .pdfContent {
-  display: none;
-  background: rgba(0, 0, 0, 0.556);
-}
-
-.items:hover .pdfContent {
-  display: block;
-  position: absolute;
-  z-index: 999;
-  height: 300px;
-  width: 300px;
+  margin: 10px;
+  border: 1px solid;
+  background: #fff;
+  color: #000;
 }
 
 @media only screen and (max-width: 600px) {
   .questions .container {
     grid-template-columns: repeat(1, 1fr);
   }
-  .scroll-left {
-    display: none;
-  }
 }
 @media only screen and (max-width: 400px) {
   .questions .container {
     grid-template-columns: repeat(1, 1fr);
     margin: 0 10px;
-  }
-  .scroll-left {
-    display: none;
   }
 }
